2021-01-04 1.15.3   * Neue Main Version 1.15.3.   * Neue Version der DAS-Pflege Spezifikation 2.0. Erfordert eine Codeänderung im QDVS Modul.